--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+flake8
 black == 23.3.0
 click >= 8.0.0
 mypy == 1.3.0
@@ -12,12 +13,15 @@ dataclasses-json == 0.5.7
 tiktoken >=0.0.4
 tabulate == 0.9.0
 python-dotenv >= 0.21.0
-torch
-torchvision
-torchaudio
-transformers
-ctransformers
+transformers == 4.33.3
+ctransformers[cuda]
 langchain
 sentencepiece
 xformers
 protobuf
+
+# PyTorch dependencies
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.0.1
+torchvision==0.15.2
+torchaudio==2.0.2
